# AoC

./: .gitignore
aoc_2018/: Cargo.toml
aoc_2018/src/: day1.rs  day2.rs  main.rs
aoc_2021/day1/src/: main.rs
aoc_2022/: Cargo.toml  solution.rs
aoc_2022/src/: day1.rs  lib.rs  main.rs
aoc_2023/: Cargo.toml
aoc_2023/src/: day1.rs  lib.rs  main.rs
aoc_2024/: Cargo.toml
aoc_2024/src/: day1.rs  lib.rs
