[package]
name = "advent-of-code-2024"
version = "0.1.0"
authors = ["Tuanhan Karlibas <dvt.tnhn.krlbs@icloud.com>"]
edition = "2021"

[lib]
name = "advent_of_code_2024"

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
bytes = "1.5.0"
itertools = "0.13.0"

# [bin]
# name = "aoc-2023"
